deployments/hostpath-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-demo
spec:
  containers:
  - name: container1
    image: nginx
    volumeMounts:
    - name: hostpath-volume
      mountPath: /data
  volumes:
  - name: hostpath-volume
    hostPath:
      path: /data/my-pv
      type: DirectoryOrCreate
