deployments/namespacePod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
spec:
  conatiners:
  - name: nginx-container
    image: nginx
    resources:
      requests:
        cpu: "1"
        memory: 1Gi
      limits:
        cpu: "2"
        memory: 2Gi
